Automatically jump to data, fixes #157
git-svn-id: http://rsg.pml.ac.uk/intranet/svnroots/opec/WP6/OpEcVis@552 88df7874-9788-482e-997b-05ce3c9f3a1b

--- a/html/static/css/main.css
+++ b/html/static/css/main.css
@@ -1210,3 +1210,10 @@ div.olMapViewport {
    display: block;
    margin: -8px;
 }
+
+.opec-logo  {
+   border: 0 none;
+   position: absolute;
+   right: 10px;
+   bottom: 10px;   
+}
